samples/_failures_safe/1761337890_d64963_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8ad78f1a.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_8ad78f1a.c:158:5: error: ‘lex’ undeclared (first use in this function); did you mean ‘lexer’?
  158 |     lex
      |     ^~~
      |     lexer
./samples/SAFE/__tmp_8ad78f1a.c:158:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_8ad78f1a.c:158:8: error: expected ‘;’ at end of input
  158 |     lex
      |        ^
      |        ;
./samples/SAFE/__tmp_8ad78f1a.c:158:5: error: expected declaration or statement at end of input
  158 |     lex
      |     ^~~
